--- a/serverless.yml
+++ b/serverless.yml
@@ -11,6 +11,7 @@ provider:
     role: arn:aws:iam::535557349201:role/LabRole
 
 functions:
+  # Funciones existentes
   lista_buckets:
     handler: lista_buckets.lambda_handler
     memorySize: 512
@@ -19,7 +20,8 @@ functions:
           path: /s3/lista-buckets
           method: get
           cors: true
-          integration: lambda
+          integration: lambda-proxy
+
   lista_objetos_bucket:
     handler: lista_objetos_bucket.lambda_handler
     events:
@@ -27,4 +29,35 @@ functions:
           path: /s3/bucket/lista-objetos
           method: post
           cors: true
-          integration: lambda
+          integration: lambda-proxy
+
+  # 🔥 NUEVAS FUNCIONES
+  crear_bucket:
+    handler: crear_bucket.lambda_handler
+    memorySize: 512
+    events:
+      - http:
+          path: /s3/crear-bucket
+          method: post
+          cors: true
+          integration: lambda-proxy
+
+  crear_directorio:
+    handler: crear_directorio.lambda_handler
+    events:
+      - http:
+          path: /s3/crear-directorio
+          method: post
+          cors: true
+          integration: lambda-proxy
+
+  subir_archivo:
+    handler: subir_archivo.lambda_handler
+    memorySize: 512
+    timeout: 30
+    events:
+      - http:
+          path: /s3/subir-archivo
+          method: post
+          cors: true
+          integration: lambda-proxy
